--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,8 @@ worlds:
   Winthier:
     Enabled: true
     GenerateHotspots: true
+    SpecialBiomes: false
   Resource:
     Enabled: true
     GenerateHotspots: false
+    SpecialBiomes: true
