Only certain fraction of chunks contains dungeons

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,6 +4,6 @@ worlds:
     GenerateHotspots: false
     SpecialBiomes: false
     MiniCaves: false
-    Dungeons: false
+    Dungeons: 50
     Seed: 1234567890
     TNT: 0
