Halloween (By now mostly defunct)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,6 +8,7 @@ commands:
   ore:
     description: Admin interface
     permission: ore.ore
+    usage: WRONG
 permissions:
   ore.ore:
     description: Use the admin command
