--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ description: Custom, dynamic ore generation
 author: StarTux
 version: 0.1
 main: com.winthier.ore.OrePlugin
+depend: [ Custom ]
 softdepend: [ Exploits ]
 commands:
   ore:
