--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ description: Custom, dynamic ore generation
 author: StarTux
 version: 0.1
 api-version: 1.13
+website: https://cavetale.com
 main: com.winthier.ore.OrePlugin
 depend: [ Custom ]
 softdepend: [ Exploits ]
